Src/PCompiler/CompilerCore/Parser/.antlr/PParser.java
// Generated from /Users/nyfkxj/ucb_archive/eecs219c/P/Src/PCompiler/CompilerCore/Parser/PParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ANY=1, BOOL=2, ENUM=3, EVENT=4, EVENTSET=5, FLOAT=6, INT=7, MACHINE=8, 
		INTERFACE=9, MAP=10, SET=11, STRING=12, SEQ=13, DATA=14, ANNOUNCE=15, 
		AS=16, ASSERT=17, ASSUME=18, BREAK=19, CASE=20, COLD=21, CONTINUE=22, 
		DEFAULT=23, DEFER=24, DO=25, ELSE=26, ENTRY=27, EXIT=28, FORMAT=29, FUN=30, 
		GOTO=31, GROUP=32, HALT=33, HOT=34, IF=35, IGNORE=36, IN=37, KEYS=38, 
		NEW=39, OBSERVES=40, ON=41, POP=42, PRINT=43, PUSH=44, RAISE=45, RECEIVE=46, 
		RETURN=47, SEND=48, SIZEOF=49, SPEC=50, START=51, STATE=52, THIS=53, TYPE=54, 
		VALUES=55, VAR=56, WHILE=57, WITH=58, CHOOSE=59, MODULE=60, IMPLEMENTATION=61, 
		TEST=62, REFINES=63, COMPOSE=64, UNION=65, HIDEE=66, HIDEI=67, RENAME=68, 
		SAFE=69, MAIN=70, RECEIVES=71, SENDS=72, CREATES=73, TO=74, BoolLiteral=75, 
		IntLiteral=76, NullLiteral=77, StringLiteral=78, FAIRNONDET=79, NONDET=80, 
		LNOT=81, LAND=82, LOR=83, EQ=84, NE=85, LE=86, GE=87, LT=88, GT=89, RARROW=90, 
		ASSIGN=91, INSERT=92, REMOVE=93, ADD=94, SUB=95, MUL=96, DIV=97, LBRACE=98, 
		RBRACE=99, LBRACK=100, RBRACK=101, LPAREN=102, RPAREN=103, SEMI=104, COMMA=105, 
		DOT=106, COLON=107, Iden=108, Whitespace=109, BlockComment=110, LineComment=111;
	public static final int
		RULE_program = 0, RULE_iden = 1, RULE_int = 2, RULE_type = 3, RULE_idenTypeList = 4, 
		RULE_idenType = 5, RULE_funParamList = 6, RULE_funParam = 7, RULE_topDecl = 8, 
		RULE_typeDefDecl = 9, RULE_enumTypeDefDecl = 10, RULE_enumElemList = 11, 
		RULE_enumElem = 12, RULE_numberedEnumElemList = 13, RULE_numberedEnumElem = 14, 
		RULE_eventDecl = 15, RULE_cardinality = 16, RULE_eventSetDecl = 17, RULE_eventSetLiteral = 18, 
		RULE_interfaceDecl = 19, RULE_implMachineDecl = 20, RULE_idenList = 21, 
		RULE_receivesSends = 22, RULE_specMachineDecl = 23, RULE_machineBody = 24, 
		RULE_machineEntry = 25, RULE_varDecl = 26, RULE_funDecl = 27, RULE_group = 28, 
		RULE_groupItem = 29, RULE_stateDecl = 30, RULE_stateBodyItem = 31, RULE_nonDefaultEventList = 32, 
		RULE_nonDefaultEvent = 33, RULE_eventList = 34, RULE_eventId = 35, RULE_stateName = 36, 
		RULE_functionBody = 37, RULE_statement = 38, RULE_lvalue = 39, RULE_recvCase = 40, 
		RULE_anonEventHandler = 41, RULE_noParamAnonEventHandler = 42, RULE_expr = 43, 
		RULE_formatedString = 44, RULE_primitive = 45, RULE_floatLiteral = 46, 
		RULE_unnamedTupleBody = 47, RULE_namedTupleBody = 48, RULE_rvalueList = 49, 
		RULE_rvalue = 50, RULE_modExpr = 51, RULE_bindExpr = 52, RULE_namedModuleDecl = 53, 
		RULE_testDecl = 54, RULE_implementationDecl = 55;
	public static final String[] ruleNames = {
		"program", "iden", "int", "type", "idenTypeList", "idenType", "funParamList", 
		"funParam", "topDecl", "typeDefDecl", "enumTypeDefDecl", "enumElemList", 
		"enumElem", "numberedEnumElemList", "numberedEnumElem", "eventDecl", "cardinality", 
		"eventSetDecl", "eventSetLiteral", "interfaceDecl", "implMachineDecl", 
		"idenList", "receivesSends", "specMachineDecl", "machineBody", "machineEntry", 
		"varDecl", "funDecl", "group", "groupItem", "stateDecl", "stateBodyItem", 
		"nonDefaultEventList", "nonDefaultEvent", "eventList", "eventId", "stateName", 
		"functionBody", "statement", "lvalue", "recvCase", "anonEventHandler", 
		"noParamAnonEventHandler", "expr", "formatedString", "primitive", "floatLiteral", 
		"unnamedTupleBody", "namedTupleBody", "rvalueList", "rvalue", "modExpr", 
		"bindExpr", "namedModuleDecl", "testDecl", "implementationDecl"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'any'", "'bool'", "'enum'", "'event'", "'eventset'", "'float'", 
		"'int'", "'machine'", "'interface'", "'map'", "'set'", "'string'", "'seq'", 
		"'data'", "'announce'", "'as'", "'assert'", "'assume'", "'break'", "'case'", 
		"'cold'", "'continue'", "'default'", "'defer'", "'do'", "'else'", "'entry'", 
		"'exit'", "'format'", "'fun'", "'goto'", "'group'", "'halt'", "'hot'", 
		"'if'", "'ignore'", "'in'", "'keys'", "'new'", "'observes'", "'on'", "'pop'", 
		"'print'", "'push'", "'raise'", "'receive'", "'return'", "'send'", "'sizeof'", 
		"'spec'", "'start'", "'state'", "'this'", "'type'", "'values'", "'var'", 
		"'while'", "'with'", "'choose'", "'module'", "'implementation'", "'test'", 
		"'refines'", "'compose'", "'union'", "'hidee'", "'hidei'", "'rename'", 
		"'safe'", "'main'", "'receives'", "'sends'", "'creates'", "'to'", null, 
		null, "'null'", null, "'$$'", "'$'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
		"'<='", "'>='", "'<'", "'>'", "'->'", "'='", "'+='", "'-='", "'+'", "'-'", 
		"'*'", "'/'", "'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "','", 
		"'.'", "':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ANY", "BOOL", "ENUM", "EVENT", "EVENTSET", "FLOAT", "INT", "MACHINE", 
		"INTERFACE", "MAP", "SET", "STRING", "SEQ", "DATA", "ANNOUNCE", "AS", 
		"ASSERT", "ASSUME", "BREAK", "CASE", "COLD", "CONTINUE", "DEFAULT", "DEFER", 
		"DO", "ELSE", "ENTRY", "EXIT", "FORMAT", "FUN", "GOTO", "GROUP", "HALT", 
		"HOT", "IF", "IGNORE", "IN", "KEYS", "NEW", "OBSERVES", "ON", "POP", "PRINT", 
		"PUSH", "RAISE", "RECEIVE", "RETURN", "SEND", "SIZEOF", "SPEC", "START", 
		"STATE", "THIS", "TYPE", "VALUES", "VAR", "WHILE", "WITH", "CHOOSE", "MODULE", 
		"IMPLEMENTATION", "TEST", "REFINES", "COMPOSE", "UNION", "HIDEE", "HIDEI", 
		"RENAME", "SAFE", "MAIN", "RECEIVES", "SENDS", "CREATES", "TO", "BoolLiteral", 
		"IntLiteral", "NullLiteral", "StringLiteral", "FAIRNONDET", "NONDET", 
		"LNOT", "LAND", "LOR", "EQ", "NE", "LE", "GE", "LT", "GT", "RARROW", "ASSIGN", 
		"INSERT", "REMOVE", "ADD", "SUB", "MUL", "DIV", "LBRACE", "RBRACE", "LBRACK", 
		"RBRACK", "LPAREN", "RPAREN", "SEMI", "COMMA", "DOT", "COLON", "Iden", 
		"Whitespace", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PParser.EOF, 0); }
		public List<TopDeclContext> topDecl() {
			return getRuleContexts(TopDeclContext.class);
		}
		public TopDeclContext topDecl(int i) {
			return getRuleContext(TopDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ENUM) | (1L << EVENT) | (1L << EVENTSET) | (1L << MACHINE) | (1L << INTERFACE) | (1L << FUN) | (1L << SPEC) | (1L << TYPE) | (1L << MODULE) | (1L << IMPLEMENTATION) | (1L << TEST))) != 0) || _la==MAIN) {
				{
				{
				setState(112);
				topDecl();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdenContext extends ParserRuleContext {
		public TerminalNode Iden() { return getToken(PParser.Iden, 0); }
		public IdenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iden; }
	}

	public final IdenContext iden() throws RecognitionException {
		IdenContext _localctx = new IdenContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_iden);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(Iden);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntContext extends ParserRuleContext {
		public TerminalNode IntLiteral() { return getToken(PParser.IntLiteral, 0); }
		public IntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_int; }
	}

	public final IntContext int() throws RecognitionException {
		IntContext _localctx = new IntContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_int);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(IntLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetTypeContext extends TypeContext {
		public TerminalNode SET() { return getToken(PParser.SET, 0); }
		public TerminalNode LBRACK() { return getToken(PParser.LBRACK, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(PParser.RBRACK, 0); }
		public SetTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class SeqTypeContext extends TypeContext {
		public TerminalNode SEQ() { return getToken(PParser.SEQ, 0); }
		public TerminalNode LBRACK() { return getToken(PParser.LBRACK, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(PParser.RBRACK, 0); }
		public SeqTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class NamedTypeContext extends TypeContext {
		public IdenContext name;
		public IdenContext iden() {
			return getRuleContext(IdenContext.class,0);
		}
		public NamedTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class TupleTypeContext extends TypeContext {
		public TypeContext type;
		public List<TypeContext> tupTypes = new ArrayList<TypeContext>();
		public TerminalNode LPAREN() { return getToken(PParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PParser.RPAREN, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PParser.COMMA, i);
		}
		public TupleTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class NamedTupleTypeContext extends TypeContext {
		public TerminalNode LPAREN() { return getToken(PParser.LPAREN, 0); }
		public IdenTypeListContext idenTypeList() {
			return getRuleContext(IdenTypeListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PParser.RPAREN, 0); }
		public NamedTupleTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class PrimitiveTypeContext extends TypeContext {
		public TerminalNode BOOL() { return getToken(PParser.BOOL, 0); }
		public TerminalNode INT() { return getToken(PParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(PParser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(PParser.STRING, 0); }
		public TerminalNode EVENT() { return getToken(PParser.EVENT, 0); }
		public TerminalNode MACHINE() { return getToken(PParser.MACHINE, 0); }
		public TerminalNode DATA() { return getToken(PParser.DATA, 0); }
		public TerminalNode ANY() { return getToken(PParser.ANY, 0); }
		public PrimitiveTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}
	public static class MapTypeContext extends TypeContext {
		public TypeContext keyType;
		public TypeContext valueType;
		public TerminalNode MAP() { return getToken(PParser.MAP, 0); }
		public TerminalNode LBRACK() { return getToken(PParser.LBRACK, 0); }
		public TerminalNode COMMA() { return getToken(PParser.COMMA, 0); }
		public TerminalNode RBRACK() { return getToken(PParser.RBRACK, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public MapTypeContext(TypeContext ctx) { copyFrom(ctx); }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new SeqTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(SEQ);
				setState(125);
				match(LBRACK);
				setState(126);
				type();
				setState(127);
				match(RBRACK);
				}
				break;
			case 2:
				_localctx = new SetTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(SET);
				setState(130);
				match(LBRACK);
				setState(131);
				type();
				setState(132);
				match(RBRACK);
				}
				break;
			case 3:
				_localctx = new MapTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(MAP);
				setState(135);
				match(LBRACK);
				setState(136);
				((MapTypeContext)_localctx).keyType = type();
				setState(137);
				match(COMMA);
				setState(138);
				((MapTypeContext)_localctx).valueType = type();
				setState(139);
				match(RBRACK);
				}
				break;
			case 4:
				_localctx = new TupleTypeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(141);
				match(LPAREN);
				setState(142);
				((TupleTypeContext)_localctx).type = type();
				((TupleTypeContext)_localctx).tupTypes.add(((TupleTypeContext)_localctx).type);
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(143);
					match(COMMA);
					setState(144);
					((TupleTypeContext)_localctx).type = type();
					((TupleTypeContext)_localctx).tupTypes.add(((TupleTypeContext)_localctx).type);
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(150);
				match(RPAREN);
				}
				break;
			case 5:
				_localctx = new NamedTupleTypeContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				match(LPAREN);
				setState(153);
				idenTypeList();
				setState(154);
				match(RPAREN);
				}
				break;
			case 6:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(156);
				match(BOOL);
				}
				break;
			case 7:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(157);
				match(INT);
				}
				break;
			case 8:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(158);
				match(FLOAT);
				}
				break;
			case 9:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(159);
				match(STRING);
				}
				break;
			case 10:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(160);
				match(EVENT);
				}
				break;
			case 11:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(161);
				match(MACHINE);
				}
				break;
			case 12:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(162);
				match(DATA);
				}
				break;
			case 13:
				_localctx = new PrimitiveTypeContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(163);
				match(ANY);
				}
				break;
			case 14:
				_localctx = new NamedTypeContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(164);
				((NamedTypeContext)_localctx).name = iden();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdenTypeListContext extends ParserRuleContext {
		public List<IdenTypeContext> idenType() {
			return getRuleContexts(IdenTypeContext.class);
		}
		public IdenTypeContext idenType(int i) {
			return getRuleContext(IdenTypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PParser.COMMA, i);
		}
		public IdenTypeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idenTypeList; }
	}

	public final IdenTypeListContext idenTypeList() throws RecognitionException {
		IdenTypeListContext _localctx = new IdenTypeListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idenTypeList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			idenType();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(168);
				match(COMMA);
				setState(169);
				idenType();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
